updated tables and some round 1 corrections

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -3,11 +3,11 @@
 \section{Abstract}
 \section{Introduction}
 
-Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., & High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
+Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., \& High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
 
 
 
-Good bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., & White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
+Good bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., \& White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
 
 
 
