--- a/thesis.tex
+++ b/thesis.tex
@@ -49,7 +49,7 @@
 \newacronym{popc}{POPC}{Palmitoyloleoylphosphatidylcholine}
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{sp}{SP}{Signal Peptide}
-\newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
+\newacronym{snare}{SNARE}{Soluble N-ethylmaleimide-sensitive factor attachment protein receptor}
 \newacronym{ks}{KS}{Kolmogorov-Smirnov}
 \newacronym{kw}{KW}{Kruskal-Wallis}
 \newacronym{gpcr}{GPCR}{G protein-–coupled receptor}
