added gpcr cancer references

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -3,23 +3,16 @@
 \section{Abstract}
 \section{Introduction}
 
+\gls{gpcr}s are a diverse family of membrane surface receptors.
+They have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
+
 Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., \& High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
-
-
 
 Good bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., \& White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
 
-
-
 Potassium channel (shaker family) S3–S4 insertion may, in part, occur in a sequential or “cotranslational” manner potassium channel - Zhang,L., Sato,Y., Hessa,T., von Heijne,G., Lee,J.-K., Kodama,I., Sakaguchi,M. and Uozumi,N. (2007) Contribution of hydrophobic and electrostatic interactions to the membrane integration of the Shaker K+ channel voltage sensor domain. Proc. Natl. Acad. Sci. U. S. A., 104, 8263–8.
 
-
-
-
 SecY “cracks” open according to crystal structure analysis. Allows potential TMH to probe the environment. Egea,P.F. and Stroud,R.M. Lateral opening of a translocon upon entry of protein suggests the mechanism of insertion into membranes. 10.1073/pnas.1012556107.
-
-
-
 
 Translational Arrest Peptides as in Vivo Force Sensors found interactions between C-terminal TMH and upstream TMH as the C-terminal TMH is partitioning from the translocon. 1. Cymer,F. and von Heijne,G. (2013) Cotranslational folding of membrane proteins probed by arrest-peptide-mediated force measurements. Proc. Natl. Acad. Sci. U. S. A., 110, 14640–5.
 
@@ -31,8 +24,6 @@ Accessibility assay and an improved intramolecular crosslinking assay showed tha
 Ribosomal folding of the TMHs (in Kv1.3) is kept in the translocon therefor tertiary folding of the voltage sensor domain occurs via preformed secondary-structure formation. Tu,L.W. and Deutsch,C. (2010) A Folding Zone in the Ribosomal Exit Tunnel for Kv1.3 Helix Formation. J. Mol. Biol., 396, 1346–1360.
 
 Ribosomal tunnel speeds up elongation of neutral and negatively-charged peptides because it has sporadic negative patches. Lu,J. and Deutsch,C. (2008) Electrostatics in the Ribosomal Tunnel Modulate Chain Elongation Rates. J. Mol. Biol., 384, 73–86.
-
-
 
 \section{Methods}
 \subsection{Datasets}
@@ -55,16 +46,13 @@ Graphs of complexity and hydrophobicity distributions
 Show there are step changes in GPCRs from Bahadur
 Supplementary tables for additional stats tests and hydrophobicities
 
-
 \subsection{The pattern is present for GPCR subfamilies}
 Figure of complexity distributions with Rhodopsin like, Secretin, metabotropic glutamate, Fungal mating, cyclic AMP, Frizzled and smooth.
 Bahadur tables also
 
-
 \subsection{The prevelance of this amongst all TMPs.}
 Mechano-sensitive (controlled vocabulary if no list available) distributions
 Voltage gated (controlled vocabulary if no list available) distributions
-
 
 \section{Discussion}
 GPCRs have long be known to be overrepresented among genomes \cite{Remm2000}.
