moved sequntial insertion from intro to chapter

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -305,17 +305,7 @@ No notable membrane potential has been identified in the Golgi~\cite{Schapiro200
 \subsection{Translocation Overview}
 There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic post-translational translocation, bacterial post-translational insertion using the Tat system for folded proteins and the Sec system for unfolded proteins, and co-translational insertion in bacteria through the~\gls{htl} protein complex or its individual components.
 
-Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
-
-
-
-\subsection{Co-Translational Translocation}
-The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
-It has long been understood that this method is essentially the ~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to a~\gls{sr} in association with some membrane insertion machinery on the~\gls{er}~\cite{Pool2005, Hessa2005}.
-
-Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
-Mutant studies of~\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
-These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
+\subsection{Co-translational Translocation}
 
 
 \subsection{Post-Translational Translocation}
