--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -2,13 +2,28 @@
 \chapter{Co-operative TMH Insertion}
 \section{Abstract}
 \section{Introduction}
+\subsection{Sequential insertion}
+
+Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
+
+The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
+It has long been understood that this method is essentially the ~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to a~\gls{sr} in association with some membrane insertion machinery on the~\gls{er}~\cite{Pool2005, Hessa2005}.
+
+Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
+Mutant studies of~\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
+These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
+
+\subsection{Cooperative insertion}
 
 \gls{gpcr}s are a diverse family of membrane surface receptors.
 They have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
 
+
+
+
 Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., \& High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
 
-Good bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., \& White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
+Good\--bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., \& White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
 
 Potassium channel (shaker family) S3–S4 insertion may, in part, occur in a sequential or “cotranslational” manner potassium channel - Zhang,L., Sato,Y., Hessa,T., von Heijne,G., Lee,J.-K., Kodama,I., Sakaguchi,M. and Uozumi,N. (2007) Contribution of hydrophobic and electrostatic interactions to the membrane integration of the Shaker K+ channel voltage sensor domain. Proc. Natl. Acad. Sci. U. S. A., 104, 8263–8.
 
