added new figure

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -2,7 +2,6 @@
 \chapter{Co-operative TMH Insertion}
 \section{Abstract}
 \section{Introduction}
-\subsection{Sequential insertion}
 
 Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
 
@@ -13,12 +12,25 @@ Crystal structures showed the \gls{srp} targets the nascent peptide chain for me
 Mutant studies of~\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
 These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
 
-\subsection{Cooperative insertion}
+The prevailing idea about membrane insertion by the translocon is that the \gls{tmh}s partition in the membrane one at a time as the translocon lateral gate opens, exposing the \gls{tmh} to the membrane \ref{fig:sequential-insertion}.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=1\textwidth]{multipass-folding/sequential-insertion}
+        \captionof{figure}[A cartoon showing the generally accepted schematic of sequential multipass TMH insertion into the membranes.]{\textbf{A cartoon showing the generally accepted schematic of sequential multipass TMH insertion into the membranes.}
+        The two key concepts are that, one at a time, the TMHs emerge from the ribosome into the translocon.
+        This triggers the lateral gate to open.
+        As the nascent TMH is exposed to the membrane, it begins to partition.
+        This implies that the TMHs ultimately have no meaningful interactions with one another until they the protein has been threaded into the membrane and the1 TMH bundle is formed.
+
+}
+
+\label{fig:sequential-insertion}
+\end{figure}
+
 
 \gls{gpcr}s are a diverse family of membrane surface receptors.
 They have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
-
-
 
 
 Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., \& High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
@@ -32,6 +44,17 @@ SecY “cracks” open according to crystal structure analysis. Allows potential
 Translational Arrest Peptides as in Vivo Force Sensors found interactions between C-terminal TMH and upstream TMH as the C-terminal TMH is partitioning from the translocon. 1. Cymer,F. and von Heijne,G. (2013) Cotranslational folding of membrane proteins probed by arrest-peptide-mediated force measurements. Proc. Natl. Acad. Sci. U. S. A., 110, 14640–5.
 
 \subsection{Ribsomes in the biogenesis of membrane proteins.}
+Ribosomes translate mRNA sequences to amino acid chains and are present in all living cells, and indeed the ribosomal complexes presence and activity is for many used to define whether something is alive.
+They are a highly conserved RNA-protein complex with a multitude of accessory proteins and targetting factors.
+
+During translation of a \gls{tmp} protein, the \gls{srp} binds to the ribosome after recognising the nascent protein as a \gls{tmp}.
+This complex then binds to the \gls{sr} in association with the membrane bound translocon.
+The nascent peptide is then fed into the translocon as it is being translated; hence ``co-translational insertion''.
+
+The journey of the \gls{tmh} through this machinery has been studied using both crosslinking experiments and a relatively new technique of \gls{ap}s.
+
+
+
 Accessibility assay and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (“paddle”) of a voltage-gated potassium (Kv)forms in the ribosome tunnel - Tu,L., Khanna,P. and Deutsch,C. (2014) Transmembrane Segments Form Tertiary Hairpins in the Folding Vestibule of the Ribosome. J. Mol. Biol., 426, 185–198.
 
  Size dependent folding happens through the exit tunnel. Ribosome mutants (Leucine 23 and 24 deletions) Zinc finger folds deeper in L23 mutant than wildtype (but not L24) and a 100 residue domain folds deeper than the L24 mutant (but not the L23). Kudva,R., Pardo-Avila,F., Sandhu,H., Carroni,M., Bernstein,H.D. and Heijne,G. Von (2018) The Shape of the Ribosome Exit Tunnel Affects Cotranslational Protein Folding. bioRxiv, 10.1101/274191.
