--- a/thesis.tex
+++ b/thesis.tex
@@ -57,6 +57,8 @@
 \newacronym{rna}{RNA}{Ribonucleic Acid}
 \newacronym{srp}{SRP}{Signal Recognition Particle}
 \newacronym{sr}{SR}{Signal Recognition Particle Receptor}
+\newacronym{ap}{AP}{Arrest Peptide}
+
 
 
 
